force-app/main/default/objects/MessagingSession/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the session was handed off to a human (deterministic).</description>
    <inlineHelpText>Flags sessions handed off to a human agent. Used to report escalation rate and to separate bot-resolved from human-resolved conversations.</inlineHelpText>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>