force-app/main/default/objects/MessagingSession/fields/Greeting_Message__c.field-meta.xml
<CustomField>
    <fullName>Greeting_Message__c</fullName>
    <label>Greeting Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>