force-app/main/default/objects/MessagingSession/fields/Last_Scored_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Scored_At__c</fullName>
    <description>When this session was last scored by the engine.</description>
    <inlineHelpText>Timestamp of the most recent AI scoring run for this session. Lets you confirm scoring ran and find sessions waiting to be re-scored.</inlineHelpText>
    <label>Last Scored At</label>
    <type>DateTime</type>
</CustomField>