force-app/main/default/objects/MessagingSession/fields/locale__c.field-meta.xml
<CustomField>
    <fullName>locale__c</fullName>
    <label>locale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>