force-app/main/default/objects/MessagingSession/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <description>Latest weighted overall conversation score for this session (written by the scoring engine) for list views and native parity.</description>
    <inlineHelpText>The latest weighted AI quality score for this session, copied here so it appears directly on Messaging Session list views and reports.</inlineHelpText>
    <label>Overall Score</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>