force-app/main/default/objects/MessagingSession/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the session was resolved without human escalation.</description>
    <inlineHelpText>Flags sessions resolved without human escalation. Used to measure self-service / bot resolution rate.</inlineHelpText>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>