force-app/main/default/objects/MessagingSession/listViews/Hotel_Booking_Queue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Hotel_Booking_Queue_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Hotel Booking Queue</label>
    <queue>Hotel_Booking_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>